# cdc_agents

./: .context-meta.json  .env  .gitignore  .project  .test_env  b.sh  build.gradle.kts  docker.env  gradle.properties  pyproject.toml  requirements-docker.txt  requirements.txt  setup.py  test.http
architecture-ideas/: message-state-edits.md  trailing.md
docker/: .gitignore  Dockerfile_a2a  Dockerfile_base  Dockerfile_mcp  Dockerfile_testmcp  after-build.sh  application-docker-template.yml  build.sh  docker-compose.yml  run.sh  test-build-run.sh
idea_run/: Python tests.run.xml
idea_run/run-cdc-agents/: Project script_ run-cdc-agents.run.xml
idea_run/test-cdc-agents/: Project script_ test-cdc-agents.run.xml
prompts/: .context-meta.json
prompts/completion_definition/: .context-meta.json
prompts/completion_definition_prompts/: CdcCodeSearchAgent.md  CdcCodegenAgent.md  CodeBuildAgent.md  CodeDeployAgent.md  DeepCodeAgent.md  DeepCodeOrchestrator.md  HumanDelegateAgent.md  LibraryEnumerationAgent.md  SummarizerAgent.md  TestGraphAgent.md  TestGraphCdcCodeSearchAgent.md  TestGraphCdcCodegenAgent.md  TestGraphCodeBuildAgent.md  TestGraphCodeDeployAgent.md  TestGraphHumanDelegateAgent.md  TestGraphLibraryEnumerationAgent.md  TestGraphOrchestrator.md  TestGraphSummarizerAgent.md  TestGraphTestRunnerAgent.md  TestRunnerAgent.md
prompts/description_prompts/: .context-meta.json  CdcCodeSearchAgent.md  CdcCodegenAgent.md  (+19 more)
resources/: .context-meta.json  application-a2a.yml  application-docker.yml  application-mcp.yml  application-test.yml  application.yml  zed.json
(+136 files in other folders)
