[project]
name = "cdc-agents"
version = "0.0.1"
description = "A CDC Agents Application"

dependencies=[
    "asyncclick>=8.1.8",
    "asyncio>=3.4.3",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "pydantic==2.11.3",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "streamlit>=1.44.0",
    "setuptools==68.0.0",
    "uvicorn>=0.34.0",
    "python-dotenv==1.1.0",
    "jwcrypto>=1.5.6",
    "torch==2.7.0",
    "pyjwt>=2.10.1",
    "injector==0.22.0",
    "networkx==3.1",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-postgres==2.0.21",
    "psycopg[binary]==3.2.9",
    "rerankers==0.8.0",
    "langchain==0.3.24",
    "langchain-mcp-adapters==0.0.9",
    "langgraph==0.3.34",
    "langchain-ollama==0.3.2",
    "pytest==8.3.4",
    "python_di",
    "python_util",
    "aisuite",
    "drools_py",
    "mcp>=1.0.0",
    "nest-asyncio==1.6.0"
]

requires-python = ">=3.10"

[tool.uv.sources]
drools_py = { workspace = true }
python_di = { workspace = true }
python_util = { workspace = true }
aisuite = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
run-cdc-agents = "cdc_agents.main.run_cdc_agents:CdcAgentsApplication"
test-cdc-agents = "cdc_agents.test.run_cdc_agents:main"
run-mcp-client = "cdc_agents.mcp_client.mcp_client_main:CdcAgentsApplication"

[tool.setuptools]
packages = ["cdc_agents"]
package-dir = {"" = "src"}
